http://java.net/jira/browse/JAVASERVERFACES-2329
Index: jsf-ri/src/main/java/com/sun/faces/facelets/impl/DefaultFaceletFactory.java

- Instead of using string concatenation with the magic string "file://",
  use the deprecated method File.toURL().

  Tested on Window and Unix.


git-svn-id: https://svn.java.net/svn/mojarra~svn/trunk@9702 761efcf2-d34d-6b61-9145-99dcacc3edf1